Add write modes + change filename to filepath (#5)
* Add write modes + change filename to filepath

* add create_parent_dirs config to handle path creation if parent dirs don't exist